--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -3,9 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:map="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    tools:context="MapActivity" >
+    tools:context=".fragments.MapFragment" >
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -13,11 +15,8 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MapActivity"
-        map:cameraTargetLat="47.8657299"
-        map:cameraTargetLng="7.2315736"
-        map:cameraZoom="8"
-        map:mapType="normal"/>
+        tools:context=".fragments.MapFragment"
+        map:mapType="normal" />
 
     <TextView
         android:id="@+id/error_txt"
@@ -32,35 +31,34 @@
         />
 
     <Button
-        android:id="@+id/show_closest_btn"
-        android:layout_width="46dp"
-        android:layout_height="46dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="14dp"
-        android:layout_marginRight="8dp"
-        android:text="D"
-        android:onClick="onClickClosestBtn"/>
-
-    <Button
         android:id="@+id/show_haut_rhin_btn"
-        android:layout_width="46dp"
-        android:layout_height="46dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="105dp"
+        android:layout_marginBottom="110dp"
         android:layout_marginRight="8dp"
-        android:text="68"
-        android:onClick="onClickHautRhinBtn"/>
+        android:text="68" />
 
     <Button
         android:id="@+id/show_my_location_btn"
-        android:layout_width="46dp"
-        android:layout_height="46dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="62dp"
+        android:layout_marginRight="8dp"
+        android:text="Ici" />
+
+
+    <Button
+        android:id="@+id/show_closest_defib_btn"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="14dp"
-        android:layout_marginRight="64dp"
-        android:text="Ici"
-        android:onClick="onClickMyLocationBtn"/>
+        android:layout_marginRight="8dp"
+        android:text="D" />
+
 </RelativeLayout>
