--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:map="http://schemas.android.com/apk/res-auto"
@@ -18,47 +18,55 @@
         tools:context=".fragments.MapFragment"
         map:mapType="normal" />
 
-    <TextView
-        android:id="@+id/error_txt"
+    <!-- Add some top padding when we draw behind the status bar (API >= 19) -->
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:gravity="center"
-        android:background="@color/red"
-        android:textColor="@color/white"
-        android:visibility="gone"
-        />
+        android:layout_height="match_parent"
+        android:paddingTop="@dimen/topMarginStatusBar"
+        >
 
-    <Button
-        android:id="@+id/show_haut_rhin_btn"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="110dp"
-        android:layout_marginRight="8dp"
-        android:text="68" />
+        <TextView
+            android:id="@+id/error_txt"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
+            android:gravity="center"
+            android:background="@color/red"
+            android:textColor="@color/white"
+            android:visibility="gone"
+            />
 
-    <Button
-        android:id="@+id/show_my_location_btn"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="62dp"
-        android:layout_marginRight="8dp"
-        android:text="Ici" />
+        <Button
+            android:id="@+id/show_haut_rhin_btn"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="110dp"
+            android:layout_marginRight="8dp"
+            android:text="68" />
+
+        <Button
+            android:id="@+id/show_my_location_btn"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="62dp"
+            android:layout_marginRight="8dp"
+            android:text="Ici" />
 
 
-    <Button
-        android:id="@+id/show_closest_defib_btn"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="14dp"
-        android:layout_marginRight="8dp"
-        android:text="D" />
+        <Button
+            android:id="@+id/show_closest_defib_btn"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="14dp"
+            android:layout_marginRight="8dp"
+            android:text="D" />
 
-</RelativeLayout>
+        </RelativeLayout>
+</FrameLayout>
