--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
+
 
     android:layout_height="match_parent"
     android:layout_width="match_parent"
@@ -36,7 +38,7 @@
             android:textColor="@color/white"
             android:visibility="gone"
             />
-
+<!--
         <Button
             android:id="@+id/show_haut_rhin_btn"
             android:layout_width="48dp"
@@ -57,7 +59,6 @@
             android:layout_marginRight="8dp"
             android:text="Ici" />
 
-
         <Button
             android:id="@+id/show_closest_defib_btn"
             android:layout_width="48dp"
@@ -67,6 +68,49 @@
             android:layout_marginBottom="14dp"
             android:layout_marginRight="8dp"
             android:text="D" />
+-->
+        <com.melnykov.fab.FloatingActionButton
+            android:id="@+id/show_haut_rhin_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="144dp"
+            android:layout_marginRight="24dp"
+            android:src="@drawable/fab_68"
+            fab:fab_type="mini"
+            fab:fab_colorNormal="@color/white"
+            fab:fab_colorPressed="@color/accent_pressed"
+            fab:fab_colorRipple="@color/accent_ripple"
+             />
 
-        </RelativeLayout>
+        <com.melnykov.fab.FloatingActionButton
+            android:id="@+id/show_my_location_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="88dp"
+            android:layout_marginRight="24dp"
+            android:src="@drawable/fab_my_location"
+            fab:fab_type="mini"
+            fab:fab_colorNormal="@color/white"
+            fab:fab_colorPressed="@color/accent_pressed"
+            fab:fab_colorRipple="@color/accent_ripple" />
+
+        <com.melnykov.fab.FloatingActionButton
+            android:id="@+id/show_closest_defib_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="16dp"
+            android:layout_marginRight="16dp"
+            android:src="@drawable/fab_defib"
+            fab:fab_colorNormal="@color/accent_dark"
+            fab:fab_colorPressed="@color/accent_pressed"
+            fab:fab_colorRipple="@color/accent_ripple"
+            />
+
+    </RelativeLayout>
 </FrameLayout>
