--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/bkg_drawer"
-            android:scaleType="center"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
             android:layout_marginBottom="8dp"
         />
 
