Style drawer button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,9 +23,10 @@
             android:id="@+id/drawer_toggle_btn"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginTop="@dimen/topMarginStatusBar"
-            android:background="?android:attr/selectableItemBackground"
-            android:src="@drawable/ic_menu_black_24dp"
+            android:layout_marginTop="@dimen/topMarginBtnDrawer"
+            android:layout_marginLeft="-6dp"
+            android:background="@drawable/btn_drawer"
+            android:src="@drawable/ic_menu_white_24dp"
             android:contentDescription="Menu"
             />
     </FrameLayout>
@@ -69,7 +70,6 @@
             android:text="Settings"
             android:drawableLeft="@drawable/ic_settings_grey600_24dp"
             />
-
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
