--- a/app/src/main/res/values-v19/dimens.xml
+++ b/app/src/main/res/values-v19/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="topMarginStatusBar">25dp</dimen>
+    <dimen name="topMarginBtnDrawer">46dp</dimen>
 </resources>
