Disaply defib button as gray when disabled

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,4 +30,6 @@
     <color name="deep_orange_A700">#dd2c00</color>
 
     <item name="white" type="color">#ffffffff</item>
+
+    <item name="gray_disabled" type="color">#26000000</item>
 </resources>
