Use red for errors background

--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -34,7 +34,7 @@
             android:layout_marginLeft="60dp"
             android:layout_marginRight="60dp"
             android:gravity="center"
-            android:background="@color/primary"
+            android:background="@color/accent_dark"
             android:textColor="@color/white"
             android:visibility="gone"
             />
