--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,4 +38,24 @@
         <item name="android:textSize">14sp</item>
         <item name="android:color">#de000000</item>
     </style>
+
+    <style name="CustomShowcaseTheme" parent="ShowcaseView.Light">
+        <item name="sv_backgroundColor">#BF00a621</item>
+        <item name="sv_showcaseColor">#BF00a621</item>
+        <item name="sv_tintButtonColor">true</item>
+        <item name="sv_buttonText">OK</item>
+        <item name="sv_titleTextAppearance">@style/TitleCustomShowcaseTheme</item>
+        <item name="sv_detailTextAppearance">@style/DetailCustomShowcaseTheme</item>
+    </style>
+
+    <style name="TitleCustomShowcaseTheme" parent="TextAppearance.ShowcaseView.Title.Light">
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:shadowRadius">0</item>
+    </style>
+
+    <style name="DetailCustomShowcaseTheme" parent="TextAppearance.ShowcaseView.Detail.Light">
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:shadowRadius">0</item>
+    </style>
+
 </resources>
