--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <!--   theme UI controls like checkboxes and text fields -->
         <item name="colorAccent">@color/accent</item>
+
     </style>
 
     <style name="AppTheme.TranslucentStatusBar">
@@ -36,7 +37,7 @@
         <item name="android:drawablePadding">32dp</item>
         <item name="fontPath">fonts/Roboto-Medium.ttf</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:color">#de000000</item>
+        <item name="android:textColor">#E0000000</item>
     </style>
 
     <style name="CustomShowcaseTheme" parent="ShowcaseView.Light">
