--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,7 +41,7 @@
     </style>
 
     <style name="CustomShowcaseTheme" parent="ShowcaseView.Light">
-        <item name="sv_backgroundColor">#BF00a621</item>
+        <item name="sv_backgroundColor">@color/black_85</item>
         <item name="sv_showcaseColor">#BF00a621</item>
         <item name="sv_tintButtonColor">true</item>
         <item name="sv_buttonText">OK</item>
@@ -50,12 +50,12 @@
     </style>
 
     <style name="TitleCustomShowcaseTheme" parent="TextAppearance.ShowcaseView.Title.Light">
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:shadowRadius">0</item>
     </style>
 
     <style name="DetailCustomShowcaseTheme" parent="TextAppearance.ShowcaseView.Detail.Light">
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:shadowRadius">0</item>
     </style>
 
