--- a/app/src/main/res/drawable-v21/btn_drawer.xml
+++ b/app/src/main/res/drawable-v21/btn_drawer.xml
@@ -6,6 +6,9 @@
         <shape
             android:shape="rectangle">
             <solid android:color="@color/primary" />
+            <stroke
+                android:width="2px"
+                android:color="@color/primary_pressed" />
             <corners android:radius="6dp" />
         </shape>
     </item>
