--- a/app/src/main/res/drawable/btn_drawer.xml
+++ b/app/src/main/res/drawable/btn_drawer.xml
@@ -6,12 +6,18 @@
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
             <solid android:color="@color/primary" />
+            <stroke
+                android:width="2px"
+                android:color="@color/primary_pressed" />
             <corners android:radius="6dp" />
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/primary_dark" />
+            <stroke
+                android:width="2px"
+                android:color="@color/primary_pressed" />
             <corners android:radius="6dp" />
         </shape>
     </item>
