--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -11,4 +11,10 @@
         <item name="colorAccent">@color/accent</item>
         <item name="android:textColorPrimary">@color/white</item>
     </style>
+
+    <style name="DrawerToggle">
+        <item name="android:background">@drawable/btn_drawer</item>
+        <item name="android:src">@drawable/ic_menu_white_24dp</item>
+        <item name="android:elevation">10dp</item>
+    </style>
 </resources>
