--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,11 @@
         <item name="android:layout_marginBottom">8dp</item>
     </style>
 
+    <style name="DrawerToggle">
+        <item name="android:background">@drawable/btn_drawer</item>
+        <item name="android:src">@drawable/ic_menu_white_24dp</item>
+    </style>
+
     <style name="DrawerButton">
         <item name="android:background">?android:attr/selectableItemBackground</item>
         <item name="android:gravity">start|center_vertical</item>
