--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -5,8 +5,6 @@
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
-
-
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     tools:context=".fragments.MapFragment" >
@@ -30,12 +28,15 @@
         <TextView
             android:id="@+id/error_txt"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:layout_marginLeft="60dp"
             android:layout_marginRight="60dp"
+            android:padding="10dp"
             android:gravity="center"
-            android:background="@color/accent_dark"
+            android:background="@color/deep_orange_A700_85"
             android:textColor="@color/white"
+            android:textSize="16sp"
             android:visibility="gone"
             />
 
