--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:map="http://schemas.android.com/apk/res-auto"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
@@ -16,7 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".fragments.MapFragment"
-        map:mapType="normal" />
+        map:mapType="normal"
+        />
 
     <!-- Add some top padding when we draw behind the status bar (API >= 19) -->
     <RelativeLayout
