--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,7 +30,18 @@
     <color name="deep_orange_A700">#dd2c00</color>
     <color name="deep_orange_A700_85">#d9dd2c00</color>
 
+    <color name="grey_50">#fafafa</color>
+    <color name="grey_100">#f5f5f5</color>
+    <color name="grey_200">#eeeeee</color>
+    <color name="grey_300">#e0e0e0</color>
+    <color name="grey_400">#bdbdbd</color>
+    <color name="grey_500">#9e9e9e</color>
+    <color name="grey_600">#757575</color>
+    <color name="grey_700">#616161</color>
+    <color name="grey_800">#424242</color>
+    <color name="grey_900">#212121</color>
 
     <item name="white" type="color">#ffffffff</item>
     <item name="black_85" type="color">#D9000000</item>
+    <item name="black_87" type="color">#DE000000</item>
 </resources>
