--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,18 +31,25 @@
     </style>
 
     <style name="DrawerToggle">
-        <item name="android:background">@drawable/btn_drawer</item>
+        <item name="android:background">@drawable/btn_drawer_toggle</item>
         <item name="android:src">@drawable/ic_menu_white_24dp</item>
     </style>
 
     <style name="DrawerButton">
-        <item name="android:background">?android:attr/selectableItemBackground</item>
+        <item name="android:background">@drawable/btn_drawer_background_selector</item>
         <item name="android:gravity">start|center_vertical</item>
         <item name="android:paddingLeft">16dp</item>
         <item name="android:drawablePadding">32dp</item>
         <item name="fontPath">fonts/Roboto-Medium.ttf</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">#E0000000</item>
+        <item name="android:capitalize">characters</item>
+        <item name="android:textColor">@color/black_87</item>
+        <item name="android:textIsSelectable">false</item>
+
+    </style>
+    
+    <style name="DrawerButton.Activable">
+        <item name="android:textColor">@color/btn_drawer_activable_textcolor_selector</item>
     </style>
 
     <style name="CustomShowcaseTheme" parent="ShowcaseView.Light">
