--- a/app/src/main/res/layout/drawer_content.xml
+++ b/app/src/main/res/layout/drawer_content.xml
@@ -42,6 +42,7 @@
             android:drawableLeft="@drawable/ic_settings_grey600_24dp"
             />
         <Button
+            android:id="@+id/contact_us_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/DrawerButton"
