--- a/app/src/main/res/layout/info_window_content_defibrillator.xml
+++ b/app/src/main/res/layout/info_window_content_defibrillator.xml
@@ -2,7 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/info_window_bkg"
+    android:padding="16dp">
+
+    <TextView
+        android:id="@+id/txt_city"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+
     <TextView
         android:id="@+id/txt_description"
         android:layout_width="wrap_content"
@@ -13,9 +22,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
-    <TextView
-        android:id="@+id/txt_address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+
 </LinearLayout>
