--- a/app/src/main/res/layout/info_window_content_defibrillator.xml
+++ b/app/src/main/res/layout/info_window_content_defibrillator.xml
@@ -6,12 +6,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/info_window_bkg"
-    android:padding="16dp">
+    android:paddingLeft="@dimen/info_window_padding"
+    android:paddingRight="@dimen/info_window_padding"
+    android:paddingBottom="@dimen/info_window_padding"
+    android:paddingTop="@dimen/info_window_padding_top">
 
     <TextView
         android:id="@+id/txt_city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="16sp"
         />
 
     <TextView
@@ -19,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         fontPath="fonts/Roboto-Bold.ttf"
+        android:textSize="16sp"
         />
     <TextView
         android:id="@+id/txt_environment"
