--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -10,6 +10,9 @@
         <!--   theme UI controls like checkboxes and text fields -->
         <item name="colorAccent">@color/accent</item>
         <item name="android:textColorPrimary">@color/white</item>
+
+        <item name="android:windowBackground">@color/green_200</item>
+
     </style>
 
     <style name="DrawerToggle">
