--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,7 @@
         <!--   theme UI controls like checkboxes and text fields -->
         <item name="colorAccent">@color/accent</item>
 
+        <item name="android:windowBackground">@color/green_200</item>
     </style>
 
     <style name="AppTheme.TranslucentStatusBar">
