--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,6 +42,7 @@
     <color name="grey_900">#212121</color>
 
     <item name="white" type="color">#ffffffff</item>
+    <item name="drawer_bkg" type="color">#FAFAFA</item>
     <item name="white_90" type="color">#E6ffffff</item>
     <item name="black_85" type="color">#D9000000</item>
     <item name="black_87" type="color">#DE000000</item>
