--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     tools:context="fragments.AboutFragment"
-    tools:showIn="@layout/activity_about">
+    tools:showIn="@layout/activity_about"
+    >
 
     <TextView
         android:layout_width="wrap_content"
