--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -9,6 +9,7 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <!--   theme UI controls like checkboxes and text fields -->
         <item name="colorAccent">@color/accent</item>
+        <!-- For the action bar -->
         <item name="android:textColorPrimary">@color/white</item>
 
         <item name="android:windowBackground">@color/green_200</item>
