--- a/app/src/main/res/layout/info_window_content_defibrillator.xml
+++ b/app/src/main/res/layout/info_window_content_defibrillator.xml
@@ -18,6 +18,8 @@
         android:textSize="16sp"
         />
 
+    <View style="@style/Divider"/>
+
     <TextView
         android:id="@+id/txt_description"
         android:layout_width="wrap_content"
