Update style for drawer buttons, use borderless ones

--- a/app/src/main/res/color/btn_drawer_activable_textcolor_selector.xml
+++ b/app/src/main/res/color/btn_drawer_activable_textcolor_selector.xml
@@ -3,7 +3,7 @@
 
     <item
         android:state_activated="true"
-        android:color="@color/primary_dark"
+        android:color="@color/primary"
         />
 
     <item
