--- a/app/src/main/res/drawable-v21/btn_drawer_background_selector.xml
+++ b/app/src/main/res/drawable-v21/btn_drawer_background_selector.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple
 xmlns:android="http://schemas.android.com/apk/res/android"
-android:color="@color/green_300">
+android:color="@color/grey_300">
     <item>
         <selector>
             <item
                 android:state_pressed="true"
-                android:drawable="@color/green_100"
-                />
+                android:drawable="@color/grey_100"/>
             <item
                 android:state_activated="true"
-                android:drawable="@color/green_200"
+                android:drawable="@color/grey_200"
                 />
             <item
-                android:drawable="@android:color/transparent" />
+                android:drawable="@android:color/transparent"
+                />
         </selector>
     </item>
 </ripple>
