--- a/app/src/main/res/drawable/btn_drawer_background_selector.xml
+++ b/app/src/main/res/drawable/btn_drawer_background_selector.xml
@@ -4,13 +4,13 @@
     android:enterFadeDuration="200"
     android:exitFadeDuration="200">
     <item android:state_focused="true"
-        android:drawable="@color/green_300"
+        android:drawable="@color/grey_100"
         />
     <item android:state_pressed="true"
-        android:drawable="@color/green_300"
+        android:drawable="@color/grey_300"
         />
     <item android:state_activated="true"
-        android:drawable="@color/green_200"
+        android:drawable="@color/grey_200"
         />
     <item
         android:drawable="@android:color/transparent"
