--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
+    tools:ignore="MissingPrefix"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     tools:context=".fragments.MapFragment"
@@ -86,6 +87,31 @@
             fab:fab_colorPressed="@color/accent_pressed"
             fab:fab_colorRipple="@color/accent_ripple"
             />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/show_closest_defib_btn"
+            android:layout_toStartOf="@id/show_closest_defib_btn"
+            android:layout_alignTop="@id/show_closest_defib_btn"
+            android:drawableLeft="@drawable/ic_info_outline_grey600_24dp"
+            android:drawableRight="@drawable/ic_navigate_next_white_24dp"
+            android:drawablePadding="5dp"
+            android:paddingRight="0dp"
+            android:paddingLeft="16dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:elevation="10dp"
+            android:gravity="center_vertical|right"
+            android:background="@drawable/bubble"
+            android:textColor="@color/white"
+            android:text="Quickly find the closest defibrillator oiwe fo oiewn f"
+            fontPath="fonts/Roboto-Bold.ttf"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:visibility="gone"/>
 
     </RelativeLayout>
 </FrameLayout>
