--- a/app/src/main/res/layout/info_window_content_defibrillator.xml
+++ b/app/src/main/res/layout/info_window_content_defibrillator.xml
@@ -11,20 +11,30 @@
     android:paddingTop="@dimen/info_window_padding_top">
 
     <TextView
-        android:id="@+id/txt_city"
+        android:id="@+id/txt_tip_directions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp"
-        tools:text="City"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        tools:text="Tap here to show directions"
+        android:text="@string/tip_directions"
+        fontPath="fonts/Roboto-Bold.ttf"
+        android:textStyle="bold"
+        android:textColor="@color/primary"
+        android:drawableLeft="@drawable/ic_info_outline_grey600_24dp"
+        android:drawablePadding="10dp"
+        android:visibility="gone"
         />
 
-    <ImageView
+    <TextView
+        android:id="@+id/txt_city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_directions_grey600_24dp"
-        android:contentDescription="@string/directions"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
+        android:layout_below="@id/txt_tip_directions"
+        android:textSize="16sp"
+        tools:text="City"
+        />
 
     <View
         android:id="@+id/divider"
@@ -48,5 +58,14 @@
         android:layout_below="@id/txt_description"
         tools:text="Environment"
         />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_directions_grey600_24dp"
+        android:contentDescription="@string/directions"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignBottom="@id/txt_environment"/>
 
 </RelativeLayout>
