--- a/app/src/main/res/layout/info_window_content_defibrillator.xml
+++ b/app/src/main/res/layout/info_window_content_defibrillator.xml
@@ -45,6 +45,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/divider"
+        android:paddingRight="40dp"
+        android:paddingEnd="40dp"
         fontPath="fonts/Roboto-Bold.ttf"
         android:textSize="16sp"
         tools:text="The description of defib location"
