--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,7 +52,7 @@
     </style>
 
     <style name="Tip">
-        <item name="android:visibility">gone</item>
+        <item name="android:visibility">visible</item>
         <item name="android:background">@drawable/bkg_tip</item>
         <item name="android:layout_marginLeft">16dp</item>
         <item name="android:layout_marginRight">10dp</item>
