--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -79,4 +79,23 @@
         <item name="android:textStyle">bold</item>
         <item name="android:layout_gravity">center_vertical</item>
     </style>
+
+    <style name="CustomShowcaseTheme" parent="ShowcaseView.Light">
+        <item name="sv_backgroundColor">@color/white_95</item>
+        <item name="sv_showcaseColor">@color/primary</item>
+        <item name="sv_tintButtonColor">true</item>
+        <item name="sv_buttonText">OK</item>
+        <item name="sv_titleTextAppearance">@style/TitleCustomShowcaseTheme</item>
+        <item name="sv_detailTextAppearance">@style/DetailCustomShowcaseTheme</item>
+    </style>
+
+    <style name="TitleCustomShowcaseTheme" parent="TextAppearance.ShowcaseView.Title.Light">
+        <item name="android:textColor">@color/primary</item>
+        <item name="android:shadowRadius">0</item>
+    </style>
+
+    <style name="DetailCustomShowcaseTheme" parent="TextAppearance.ShowcaseView.Detail.Light">
+        <item name="android:textColor">@color/black_87</item>
+        <item name="android:shadowRadius">0</item>
+    </style>
 </resources>
